[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/behaviour_tree/node_scenes/BT_Compositor.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/behaviour_tree/node_scenes/queries/BTQ_HasProperty.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/behaviour_tree/node_scenes/BT_Decorator.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/behaviour_tree/node_scenes/actions/BT_ClearProperty.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/behaviour_tree/node_scenes/tree_fragments/BT_ClearPropertySafe.gd" type="Script" id=5]

[node name="BT_ClearPropertySafe" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="BT_Decorator" parent="." index="0" instance=ExtResource( 3 )]

[node name="BTQ_HasProperty" parent="BT_Decorator" index="0" instance=ExtResource( 2 )]

[node name="BT_ClearProperty" parent="." index="1" instance=ExtResource( 4 )]
